ejercicio-minisite-17sept
ejercicio-minisite-17sept

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <li><a href="#">Menu3</a></li>
     <li><a href="#">Menu4</a></li>
     <li><a href="#">Menu5</a></li>
-    <li id="publicar"><a>Publicar</a></li>
+    <li id="publicar"><a href="#">Publicar</a></li>
    </ul>
     </nav>
- <section>
+ <section id="contenido">     
   <article class="item">
      <figure class="img_item">
       <img src="img/ipodliz.png"/>
@@ -38,9 +38,9 @@
         Por <a href="#">Willinthon</a>   
        </div>
        <div class="info_item">
-       <a href="#">Ws</a>
-        <span>
-        Hace <strong>5</strong>Min
+       <a class= tag_item href="#">Ws</a>
+        <span class="tiempo">
+        Hace <strong>5</strong> Min
         </span>
       </div>
       <div class="">
